--- a/smartcontracts/Dockerfile.deploy
+++ b/smartcontracts/Dockerfile.deploy
@@ -4,4 +4,4 @@ WORKDIR /develop
 COPY . .
 
 RUN forge b --skip test
-CMD ["forge script scripts/Ayahuasca.s:AyahuascaScript -f http://anvil:8545 --broadcast"]
+CMD ["forge script script/Ayahuasca.s.sol:AyahuascaScript -f http://anvil:8545 --broadcast"]
